LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1135,7 +1135,7 @@ advanced-css-styling=Erweitertes CSS-Styling
 advanced-file-system-store-configuration-name=Erweiterter File System Store
 advanced-properties=Erweiterte Eigenschaften
 advanced-reply=Erweiterte Antwort
-advanced-rule=Advanced Rule (Automatic Copy)
+advanced-rule=Erweiterte Regel
 advanced-selection=Erweiterte Auswahl
 advanced-styling=Erweitertes Styling
 aes256-key=AES-256-Schlüssel
@@ -3066,7 +3066,7 @@ chapters=Kapitel
 character-options=Zeichenoptionen
 character-threshold=Zeichen-Schwellenwert
 character-threshold-for-displaying-suggestions=Zeichenschwellenwert für die Anzeige von Vorschlägen
-character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Legen Sie die Anzahl der Zeichen fest, die der Benutzer eingeben muss, bevor er Vorschläge sieht.
 characters=Zeichen
 characters-blacklist=Zeichen-Blacklist
 characters-maximum=Maximale Zeichenanzahl
@@ -3142,7 +3142,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Auswählen, um die Liste der Dat
 check-token=Bild-Token überprüfen
 check-url=URL prüfen
 check-your-email-or-configure-email-accounts=<a href="{0}">Überprüfen Sie Ihre Email</a> oder <a href="{1}">konfigurieren Sie Ihr Email-Konto.</a>
-check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
+check-your-spelling-or-search-for-a-different-term=Überprüfen Sie Ihre Schreibweise oder suchen Sie nach einem anderen Begriff.
 checkbox=Kontrollkästchen
 checkbox-field-type-description=Ja- oder Nein-Fragen mit einem Kontrollkästchen beantworten.
 checkbox-multiple-field-type-description=Wählen Sie mehrere Optionen mit einem Kontrollkästchen aus.
@@ -5378,7 +5378,7 @@ display-fields-and-one-to-one-relationships=Felder und 1:1-Beziehungen anzeigen.
 display-folder-facet=Ordnerfacette anzeigen
 display-frequencies=Frequenzen anzeigen
 display-group-name=Gruppenname anzeigen
-display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
+display-group-name-help=Geben Sie die Bezeichnung der Überschrift für die Vorschläge der einzelnen Mitwirkenden ein.
 display-horizontally=Horizontal anzeigen
 display-immediately=Sofort anzeigen
 display-label=Label anzeigen
@@ -6741,7 +6741,7 @@ field.user-name=Name
 fields=Felder
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Felder werden hinzugefügt, wenn Sie nach Eigenschaften trennen müssen, basiert auf der Kriterienwahl des Nutzers. Wenn Sie - zum Beispiel - T-Shirts verkaufen, wollen Sie vielleicht ein Feld mit der Bezeichnung <em>Größe</em> und den Werten <em>S, M, L, XL</em>, einfügen. Die Werte mit Kommas als Trennungszeichen eingeben.
 fields-help=Liste mit Feldern, aus denen Text abgerufen und analysiert wird.
-fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
+fields-suggestion-help=Geben Sie zusätzliche Felder an, die mit der Antwort zurückgegeben werden sollen.
 fields-to-display=Anzuzeigende Felder
 fields-to-display-help=Geben Sie die Namen der Felder ein, die in der Zusammenfassung in einer kommagetrennten Liste angezeigt werden sollen. Wenn nicht gesetzt, werden alle Felder angezeigt. Das erste Feld wird immer als Titel angezeigt. Wenn zwei Felder gesetzt sind, wird immer das zweite Feld als Content angezeigt.
 fields-to-return=Zurückzusendende Felder
@@ -7264,8 +7264,8 @@ go-to-this-version=Zu dieser Version wechseln
 go-to-workspace=Zum Arbeitsbereich wechseln
 go-to-x=Gehe zu {0}
 goal=Ziel
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Benutzerdefinierte Konfiguration von Google Analytics 4
+google-analytics-4-id=Google Analytics 4 ID
 google-analytics-create-custom-configuration=Benutzerdefinierte Konfiguration von Google Analytics Create-Methode
 google-analytics-custom-configuration=Benutzerdefinierte Konfiguration von Google Analytics
 google-analytics-id=Google Analytics-ID
@@ -7833,9 +7833,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Geben Sie
 include-always=Immer einbeziehen
 include-artifact-in-repository=Artefakt in Repository einbeziehen
 include-asset-summary=Asset-Zusammenfassung hinzufügen
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Aktivieren Sie diese Option, um die Ergebniszusammenfassung mit der Antwort zurückzugeben.
 include-asset-url=Asset-URL hinzufügen
-include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
+include-asset-url-help=Aktivieren Sie diese Option, um das Ergebnis mit der Antwort zurückzugeben.
 include-bundle-symbolic-name=Bundle Symbolische Namen aufnehmen
 include-bundle-symbolic-name-description=Bei Auswahl dieser Option wird das Bundle Symbolische Name ins Bereichspräfix aufgenommen.
 include-clear-filters-option=Option Filter löschen berücksichtigen
@@ -9044,7 +9044,7 @@ lead-font-size=Lead-Schriftgröße
 lead-font-weight=Lead-Schriftstärke
 leaderboard=Rangliste
 learn-more=Mehr erfahren
-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
+learn-more-about-date-formats=Erfahren Sie mehr über Datumsformate.
 learn-more-about-x=Weitere Informationen zu {0}.
 learning-to-rank-configuration-name=Learning to Rank
 leave=Verlassen
@@ -11588,7 +11588,7 @@ page-design-options=Optionen für das Seitendesign
 page-display-order=Anzeigereihenfolge der Seiten
 page-edition-mode-x=Seitenausgabemodus: {0}
 page-editor-auto-extend-session-enabled-description=Durch das Aktivieren wird die Sitzung automatisch verlängert, während der Seiteneditor geöffnet wird.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=Der Seiteneditor speichert Ihre Arbeit automatisch.
 page-editor-configuration-name=Seiteneditor
 page-editor-max-number-of-items-edit-mode-description=Die maximale Anzahl der Elemente, die in einer Sammlung angezeigt werden, ist im Bearbeitungsmodus begrenzt, um die Leistung der Seite zu verbessern. Diese Begrenzung hat keinen Einfluss auf die Darstellung der Sammlung auf der veröffentlichten Seite. Bitte beachten Sie, dass eine Erhöhung dieses Wertes negative Auswirkungen auf die Leistung des Bearbeitungsmodus einer Inhaltsseite haben kann.
 page-elements=Seitenelemente
@@ -11657,7 +11657,7 @@ pages-option=Seitenoption
 pages-options=Seitenoptionen
 pages-to-export=Exportierte Seiten
 pages-to-publish=Zu publizierende Seiten
-pages-type=Pages Type (Automatic Copy)
+pages-type=Seitentyp
 pages-variations-help=Mit sitespezifischen Seitenvariationen können Sie mit verschiedenen Versionen der Seiten Ihrer Site gleichzeitig arbeiten. Inhalte werden dabei von allen sitespezifischen Seitenvariationen gemeinsam benutzt. Publikationen jeder sitespezifischen Seitenvariation können geplant oder manuall ausgelöst werden.
 pages-with-tag-x=Seiten mit dem Schlagwort <em>{0}</em>.
 pages-with-x-x=Seiten mit {0} <em>{1}</em>.
@@ -13212,7 +13212,7 @@ reminder=Anzeige
 reminder-email=Erinnerungs-E-Mail
 reminder-queries=Erinnerungsfragen
 reminder-query-and-answer-cannot-be-empty=Erinnerungsfrage und -antwort können nicht leer sein.
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Antwort auf Erinnerungsfrage
 reminder-query-question=Erinnerungsfrage
 reminders=Erinnerungen
 remote=Remote
@@ -13936,7 +13936,7 @@ search-entries=Einträge durchsuchen
 search-everywhere=Überall suchen
 search-experiences=Sucherfahrungen
 search-feeds=Feeds durchsuchen
-search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
+search-field-is-empty=Das Suchfeld ist leer. Alle Felder sind aufgelistet.
 search-file-entries=Dateieinträge durchsuchen
 search-folder=Ordner suchen
 search-folders=Ordner durchsuchen
@@ -14300,7 +14300,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Geltungs
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Geltungsbereich der Aktion auswählen, die diese Rolle in <em>{0}</em> ausführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Geltungsbereich der Aktionen auswählen, die diese Rolle im Portlet <em>{0}</em> ausführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Geltungsbereich der Aktionen auswählen, die diese Rolle auf der Ressource <em>{0}</em> ausführen darf.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment=Wählen Sie den Bereich Ihres Segments aus, um festzulegen, wo es verwendet werden kann.
 select-the-searchable-types-description=Wählen Sie die durchsuchbaren Typen aus. Wenn keine Typen ausgewählt sind, werden alle durchsuchbaren Typen (Assets und Objekte) durchsucht.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Wählen Sie Sites aus, bei denen diese Rolle die Aktion <em>{0}</em> auf dem {1} Portlet ausführen darf.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Wählen Sie Sites aus, bei denen diese Rolle die Aktion <em>{0}</em> auf der Ressource {1} ausführen darf.
@@ -14505,8 +14505,8 @@ set-the-discount-amount-and-the-discount-type=Rabatt und Rabatttyp festlegen. We
 set-the-display-order-of-child-pages=Anzeigereihenfolge der untergeordneten Seiten festlegen.
 set-the-display-order-of-news-feeds=Anzeigereihenfolge der Newsfeeds festlegen.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Geben Sie die folgenden Werte an, um E-Mails nach Adressen in Ordnern zu sortieren.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Benutzerdefinierte Optionen für Google Analytics 4 angeben, die für diese Seiten verwendet werden sollen.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Google Analytics 4 ID angeben, die für diese Seiten verwendet werden soll.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Benutzerdefinierte Optionen für Google Analytics Create-Methode angeben, die für diese Gruppe von Seiten verwendet werden sollen.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Benutzerdefinierte Optionen für Google Analytics angeben, die für diese Seiten verwendet werden sollen.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Google Analytics ID angeben, die für diese Seiten verwendet werden soll.
@@ -15000,7 +15000,7 @@ sites-tab-description=Sites können immer nur einer einzigen Eigenschaft zugewie
 sites-that-i-administer=Sites, die ich administriere
 sites-to-sync-x=Zu synchronisierende Sites - {0}
 size=Größe
-size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
+size-suggestion-help=Maximale Anzahl der Ergebnisse festlegen, die in den Vorschlägen angezeigt werden sollen.
 skip-to-content=Zum Inhalt springen
 skip-to-search=Zur Suche springen
 sku=SKU
@@ -15516,7 +15516,7 @@ successfully-unassigned-display-page-template=Standardvorlage für die Anzeigese
 such-as-x-or-x=Zum Beispiel {0} oder {1}
 suffix=Suffix
 suggestion-contributor=Vorschläge-Beitragender
-suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
+suggestion-contributor-help=Geben Sie den Namen des Mitwirkenden ein, der für die Anzeige von Vorschlägen verwendet wird.
 suggestion-in-progress-email=E-Mail: Vorschlag in Bearbeitung
 suggestion-received-email=E-Mail: Vorschlag erhalten
 suggestion-resolved-email=E-Mail: Vorschlag geschlossen
@@ -15525,10 +15525,10 @@ suggestion-was-deleted-successfully=Vorschlag wurde erfolgreich gelöscht.
 suggestion-was-saved-successfully=Vorschlag wurde erfolgreich gespeichert.
 suggestions=Vorschläge
 suggestions-configuration=Konfiguration der Empfehlungen
-suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
+suggestions-configuration-description=Konfigurieren Sie die Vorschläge, die ein Benutzer bei der Eingabe von Suchbegriffen sieht.
 suggestions-contributor-configuration=Vorschläge Betreiber-Konfiguration
 suggestions-contributor-configuration-help=Vorschläge Betreiber-Konfiguration JSON festlegen.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Geben Sie den contributorName für den Vorschläge-Beitragender, den displayGroupName mit dem anzuzeigenden Kopftext und die Größe ein, um die maximale Anzahl der vom Mitwirkenden zurückgegebenen Ergebnisse zu steuern.
 suggestions-were-deleted-successfully=Vorschläge wurden erfolgreich gelöscht.
 suite=Suite
 sum=Summe
@@ -16704,7 +16704,7 @@ the-selected-file-is-not-a-valid-zip-file=Die ausgewählte Datei ist keine gült
 the-selected-form-no-longer-exists=Das ausgewählte Formular existiert nicht mehr.
 the-selected-image-was-deleted=Das ausgewählte Bild wurde gelöscht.
 the-selected-image-was-moved-to-the-recycle-bin=Das ausgewählte Bild wurde in den Papierkorb verschoben.
-the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=Die ausgewählte Wissensdatenbank ist leer.
 the-selected-license-is-used-by-at-least-one-product=Die gewählte Lizenz wird von mindestens einem Produkt verwendet.
 the-selected-list-no-longer-exists=Die ausgewählte Liste gibt es nicht mehr.
 the-selected-menu-does-not-exist=Das ausgewählte Menü existiert nicht.
@@ -17144,7 +17144,7 @@ there-are-no-resolved-suggestions=Keine geschlossenen Vorschläge verfügbar.
 there-are-no-resources=Es gibt keine Ressourcen.
 there-are-no-restrictions=Es gibt keine Einschränkungen.
 there-are-no-results=Keine Ergebnisse
-there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
+there-are-no-results-for-the-search-term-x=Es gibt keine Ergebnisse für den Suchbegriff: {0}.
 there-are-no-results-for-x=Es gibt keine Ergebnisse für "{0}". Überprüfen Sie Ihre Rechtschreibung oder suchen Sie nach einem anderen Begriff.
 there-are-no-results-for-x-with-these-attributes=Es gibt keine Ergebnisse für "{0}" mit diesen Attributen. Passen Sie Ihre Filter an, um mehr Ergebnisse zu erhalten.
 there-are-no-results-with-these-attributes=Es gibt keine Ergebnisse mit diesen Attributen. Passen Sie Ihre Filter an, um mehr Ergebnisse zu erhalten.
@@ -19340,7 +19340,7 @@ x-result-for-x={0} Ergebnis für {1}
 x-results={0} Ergebnisse
 x-results-for={0} Ergebnisse für
 x-results-for-x={0} Ergebnisse für {1}
-x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
+x-results-returned-for-the-search-term-x=Ergebnisse für den Suchbegriff zurückgegeben: {1}.
 x-review-a-x={0} muss {1} überprüfen.
 x-revisions={0} Überarbeitungen
 x-role={0} Rolle
