--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3066,7 +3066,7 @@ chapters=Hoofdstukken
 character-options=Tekenopties
 character-threshold=Tekenlimiet
 character-threshold-for-displaying-suggestions=Tekenlimiet voor het weergeven van suggesties
-character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Stel het aantal tekens in dat de gebruiker moet typen voordat suggesties getoond worden.
 characters=Tekens
 characters-blacklist=Zwarte lijst tekens
 characters-maximum=Maximaal aantal tekens
@@ -5378,7 +5378,7 @@ display-fields-and-one-to-one-relationships=Geef velden en een-op-een relaties w
 display-folder-facet=Mapfacet weergeven
 display-frequencies=Frequenties weergeven
 display-group-name=Groepsnaam weergeven
-display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
+display-group-name-help=Voer het koplabel in voor de suggesties van elke bijdrager.
 display-horizontally=Horizontaal weergeven
 display-immediately=Onmiddellijk weergeven
 display-label=Weergavelabel
@@ -6741,7 +6741,7 @@ field.user-name=Naam
 fields=Velden
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=U kunt velden toevoegen om op basis van gekozen criteria een onderscheid te maken tussen artikelen. Verkoopt u bijvoorbeeld t-shirts, dan kunt u de veldnaam <em>Maat</em> en de waarden<em>S, M, L, XL</em> toevoegen. Voer de waarden in als een lijst van door komma's gescheiden opties.
 fields-help=Een lijst van velden waarvan tekst wordt opgehaald en geanalyseerd.
-fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
+fields-suggestion-help=Geef op welke aanvullende velden met het antwoord worden geretourneerd.
 fields-to-display=Weer te geven velden
 fields-to-display-help=Voer in een kommagescheiden lijst de namen in van de velden die moeten worden weergegeven in het overzicht. Als deze velden niet worden ingesteld, worden alle velden weergegeven. Het eerste veld wordt altijd weergegeven als titel. Als twee velden worden ingesteld, wordt het tweede veld altijd weergegeven als de inhoud.
 fields-to-return=Resultaatvelden
@@ -7264,8 +7264,8 @@ go-to-this-version=Naar deze versie
 go-to-workspace=Ga naar de werkruimte
 go-to-x=Ga naar {0}
 goal=Doel
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Aangepaste configuratie Google Analytics 4
+google-analytics-4-id=ID Google Analytics 4
 google-analytics-create-custom-configuration=Alleen aangepaste configuratie voor maakmethoden van Google Analytics
 google-analytics-custom-configuration=Aangepaste configuratie Google Analytics
 google-analytics-id=Analytics-ID van Google
@@ -7833,9 +7833,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Voeg alle
 include-always=Altijd opnemen
 include-artifact-in-repository=Artefact toevoegen in bewaarplaats
 include-asset-summary=Assetoverzicht opnemen
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Inschakelen om het resultaatoverzicht met het antwoord te retourneren.
 include-asset-url=Asset-URL opnemen
-include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
+include-asset-url-help=Inschakelen om de link naar het resultaat met het antwoord te retourneren.
 include-bundle-symbolic-name=Symbolische Naam Bundel opnemen
 include-bundle-symbolic-name-description=Indien geselecteerd, wordt de symbolische naam van de bundel opgenomen in de prefix van het toepassingsbegied.
 include-clear-filters-option=De optie Filters wissen toevoegen
@@ -9045,7 +9045,7 @@ lead-font-size=Hoofdtekengrootte
 lead-font-weight=Hoofdtekendikte
 leaderboard=Ranglijst
 learn-more=Meer weten
-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
+learn-more-about-date-formats=Meer informatie over datumnotatie.
 learn-more-about-x=Meer info over {0}.
 learning-to-rank-configuration-name=Leren rangschikken
 leave=Verlaten
@@ -11589,7 +11589,7 @@ page-design-options=Opties voor paginaontwerp
 page-display-order=Volgorde van paginaweergave
 page-edition-mode-x=Paginabewerkingsmodus: {0}
 page-editor-auto-extend-session-enabled-description=Bij inschakeling wordt de sessie automatisch verlengd terwijl de pagina-editor open is.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=De pagina-editor slaat uw werk automatisch op.
 page-editor-configuration-name=Pagina-editor
 page-editor-max-number-of-items-edit-mode-description=Het maximale aantal items dat in een collectie getoond wordt, is beperkt in de bewerkingsmodus vanwege de weergaveprestatie van de pagina. Deze limiet heeft geen invloed op de visualisatie van de collectie op de gepubliceerde pagina. Houd er rekening mee dat het verhogen van deze waarde een negatieve invloed kan hebben op de prestatie van de bewerkingsmodus van een inhoudpagina.
 page-elements=Pagina-elementen
@@ -11658,7 +11658,7 @@ pages-option=Paginaopties
 pages-options=Pagina opties
 pages-to-export=Te exporteren pagina's
 pages-to-publish=Te publiceren pagina's
-pages-type=Pages Type (Automatic Copy)
+pages-type=Paginatype
 pages-variations-help=Sitepaginavarianten bieden u de mogelijkheid om in parallel te werken in verschillende versies van de sitepagina's. Inhoud wordt gedeeld door alle paginavarianten van uw site. Publicatie naar live van een paginavariant kan worden gepland of handmatig gebeuren.
 pages-with-tag-x=Pagina's met label <em>{0}</em>.
 pages-with-x-x=Pagina's met {0} <em>{1}</em>.
@@ -13213,7 +13213,7 @@ reminder=Herinnering
 reminder-email=Herinnerings-e-mail
 reminder-queries=Herinneringsvragen
 reminder-query-and-answer-cannot-be-empty=De vraag en het antwoord van de herinnering kunnen niet leeg zijn.
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Antwoord op de herinneringsvraag
 reminder-query-question=Herinneringsvraag-vraag
 reminders=Herinneringen
 remote=Extern
@@ -14506,8 +14506,8 @@ set-the-discount-amount-and-the-discount-type=Stel het kortingsbedrag en -type i
 set-the-display-order-of-child-pages=Weergavevolgorde van onderliggende pagina's instellen.
 set-the-display-order-of-news-feeds=Weergavevolgorde van newsfeeds instellen.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Stel de volgende waarden in om aan een bepaald e-mailadres gekoppelde berichten in een folder te plaatsen.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Stel de aangepaste opties van Google Analytics 4 in die voor deze paginaset worden gebruikt.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Stel de ID voor Google Analytics 4 in die voor deze paginaset wordt gebruikt.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Stel de aangepaste opties voor maakmethoden van Google Analytics in die voor deze paginaset worden gebruikt.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Stel de aangepaste opties van Google Analytics in die voor deze paginaset worden gebruikt.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=De Google Analytics-ID instellen voor deze pagina's.
@@ -15001,7 +15001,7 @@ sites-tab-description=Sites kunnen slechts aan één eigenschap tegelijk worden 
 sites-that-i-administer=Sites die ik beheer
 sites-to-sync-x=Te synchroniseren sites - {0}
 size=Grootte
-size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
+size-suggestion-help=Stel het maximum aantal resultaten in dat in de suggesties wordt weergegeven.
 skip-to-content=Naar content
 skip-to-search=Naar zoeken
 sku=Artikelnummer
@@ -15517,7 +15517,7 @@ successfully-unassigned-display-page-template=Toewijzing aan de standaard weerga
 such-as-x-or-x=Zoals {0} of {1}
 suffix=Achtervoegsel
 suggestion-contributor=Suggestiebijdrager
-suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
+suggestion-contributor-help=Voer de naam in van de bijdrager die wordt gebruikt om suggesties weer te geven.
 suggestion-in-progress-email=Suggesties in voortgangs Email
 suggestion-received-email=Suggesties Email ontvangen
 suggestion-resolved-email=Suggesties Email opgelost
@@ -15526,10 +15526,10 @@ suggestion-was-deleted-successfully=Suggestie verwijderd.
 suggestion-was-saved-successfully=Suggestie opgeslagen.
 suggestions=Suggesties
 suggestions-configuration=Suggestieconfiguratie
-suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
+suggestions-configuration-description=Configureer de suggesties die een gebruiker te zien krijgt bij het invoeren van zoektermen.
 suggestions-contributor-configuration=Configuratie suggestie-inzender
 suggestions-contributor-configuration-help=Stel de JSON-configuratie van de suggestie-inzender in.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Voer de contributorName in voor de suggestiebijdrager, de displayGroupName met de weer te geven koptekst, en de grootte om het maximale aantal resultaten in te stellen dat door de bijdrager wordt geretourneerd.
 suggestions-were-deleted-successfully=Suggesties verwijderd.
 suite=Suite
 sum=Som
