--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1135,7 +1135,7 @@ advanced-css-styling=Estilo avançado de CSS
 advanced-file-system-store-configuration-name=Armazenamento Avançado de Sistema de Arquivos
 advanced-properties=Propriedades Avançadas
 advanced-reply=Resposta avançada
-advanced-rule=Advanced Rule (Automatic Copy)
+advanced-rule=Regra avançada
 advanced-selection=Seleção avançada
 advanced-styling=Estilo avançado
 aes256-key=Chave AES-256
@@ -3066,7 +3066,7 @@ chapters=Capítulos
 character-options=Opções de caracteres
 character-threshold=Limite de caractere
 character-threshold-for-displaying-suggestions=Limite de caracteres para a exibição de sugestões
-character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Defina o número de caracteres que o usuário deve digitar antes de ver sugestões.
 characters=Caracteres
 characters-blacklist=Lista de bloqueios de caracteres
 characters-maximum=Máximo de caracteres
@@ -3142,7 +3142,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Marque para ver a lista de regis
 check-token=Verificar token de imagem
 check-url=Verificar URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Verifique seu email</a> ou <a href="{1}">configure contas de email.</a>
-check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
+check-your-spelling-or-search-for-a-different-term=Verifique sua grafia ou procure um termo diferente.
 checkbox=Caixa de Seleção
 checkbox-field-type-description=Responda sim ou não usando uma caixa de seleção.
 checkbox-multiple-field-type-description=Selecionar várias opções usando uma caixa de seleção.
@@ -5378,7 +5378,7 @@ display-fields-and-one-to-one-relationships=Exibe campos e relacionamentos um a 
 display-folder-facet=Exibir a Faceta de Pastas
 display-frequencies=Frequências de exibição
 display-group-name=Exibir nome do grupo
-display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
+display-group-name-help=Insira o rótulo do título para as sugestões de cada distribuidor.
 display-horizontally=Exibir horizontalmente
 display-immediately=Exibir imediatamente
 display-label=Exibir rótulo
@@ -6741,7 +6741,7 @@ field.user-name=Nome
 fields=Campos
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Campos serão adicionados se você necessitar distinguir itens baseados nos critérios escolhidos pelo usuário. Por exemplo, se você estiver selecionando camisetas, você pode querer adicionar campos de <em>Tamanho</em> e os valores <em>P, M, G e GG</em>. Insira os valores separados por vírgula nas opções.
 fields-help=Uma lista de campos para buscar e analisar o formato do texto.
-fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
+fields-suggestion-help=Especifique campos adicionais para retornar com a resposta.
 fields-to-display=Campos para Exibir
 fields-to-display-help=Insira os nomes dos campos a serem exibidos no resumo, em uma lista dividida por vírgulas. Se não definido, todos os campos são exibidos. O primeiro campo sempre é exibido como o título. Se dois campos forem definidos, o segundo campo sempre é exibido como conteúdo.
 fields-to-return=Campos para Devolver
@@ -7264,8 +7264,8 @@ go-to-this-version=Vá para esta versão
 go-to-workspace=Ir para o Local de Trabalho
 go-to-x=Ir para {0}
 goal=Objetivo
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Configuração Personalizada Google Analytics 4
+google-analytics-4-id=ID do Google Analytics 4
 google-analytics-create-custom-configuration=Configuração de Personalização apenas para o Método de Criação do Google Analytics
 google-analytics-custom-configuration=Configuração Personalizada Google Analytics
 google-analytics-id=ID do Google Analytics
@@ -7833,9 +7833,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Inclua to
 include-always=Incluir sempre
 include-artifact-in-repository=Incluir artefato no repositório
 include-asset-summary=Incluir resumo de recursos
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Habilitar para devolver o resumo de resultados com a resposta.
 include-asset-url=Incluir URL do recurso
-include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
+include-asset-url-help=Habilitar para devolver o link para o resultado com a resposta.
 include-bundle-symbolic-name=Incluir o Nome Simbólico do Pacote
 include-bundle-symbolic-name-description=Quando selecionado, nome simbólico do pacote será incluído no prefixo de escopo.
 include-clear-filters-option=Incluir opção de filtros para limpar
@@ -9042,7 +9042,7 @@ lead-font-size=Tamanho de fonte principal
 lead-font-weight=Espessura da fonte principal
 leaderboard=Liderança
 learn-more=Aprender mais
-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
+learn-more-about-date-formats=Saiba mais sobre os formatos de dados.
 learn-more-about-x=Saber mais sobre {0}.
 learning-to-rank-configuration-name=Aprendizado para classificação
 leave=Deixar
@@ -11586,7 +11586,7 @@ page-design-options=Opções de design de página
 page-display-order=Ordem de Visualização da Página
 page-edition-mode-x=Modo de edição de página: {0}
 page-editor-auto-extend-session-enabled-description=Habilitar estenderá a sessão automaticamente enquanto o editor de página estiver aberto.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=O editor de página salva automaticamente seu trabalho.
 page-editor-configuration-name=Editor de página
 page-editor-max-number-of-items-edit-mode-description=O número máximo de itens exibidos em uma coleção é limitado no modo Editar, devido ao desempenho da renderização da página. Este limite não afeta a visualização da coleção na página publicada. Esteja ciente de que o aumento deste valor pode ter um impacto negativo no desempenho do modo de edição de uma página de conteúdo.
 page-elements=Elementos da página
@@ -11655,7 +11655,7 @@ pages-option=Opção de páginas
 pages-options=Opções de Páginas
 pages-to-export=Páginas a exportar
 pages-to-publish=Páginas a publicar
-pages-type=Pages Type (Automatic Copy)
+pages-type=Tipo de páginas
 pages-variations-help=Variações de páginas do site permitem que você trabalhe em paralelo em diferentes versões das páginas do site. O conteúdo é compartilhado por todos as suas Variações de Páginas do Site. Publicações para o Live de qualquer Variação de Páginas do Site podem ser agendadas ou executadas manualmente.
 pages-with-tag-x=Páginas com marcador <em>{0}</em>.
 pages-with-x-x=Páginas com {0} <em>{1}</em>.
@@ -13210,7 +13210,7 @@ reminder=Lembrete
 reminder-email=Email lembrete
 reminder-queries=Lembrete da Pergunta
 reminder-query-and-answer-cannot-be-empty=A pergunta e a resposta do lembrete não podem ser vazias.
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Resposta da consulta do lembrete
 reminder-query-question=Pergunta do Lembrete
 reminders=Lembretes
 remote=Remoto
@@ -13934,7 +13934,7 @@ search-entries=Pesquisar Registros
 search-everywhere=Pesquisar Tudo
 search-experiences=Experiência de busca
 search-feeds=Pesquisar Feeds
-search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
+search-field-is-empty=Campo de pesquisa vazio. Todos os campos são listados.
 search-file-entries=Pesquisar Arquivos
 search-folder=Pesquisar Pasta
 search-folders=Pesquisar Pastas
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecion
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecionar o escopo da ação que esta função pode realizar em <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Selecionar o escopo da ação que esta função pode realizar no portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Selecionar o escopo da ação que esta função pode realizar no recurso <em>{0}</em>.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment=Selecione o escopo de seu segmento para especificar onde ele pode ser usado.
 select-the-searchable-types-description=Selecione os tipos de buscáveis. Se nenhum tipo for selecionado, todos os tipos de buscáveis (conteúdo e objetos) serão buscados.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Selecione os sites onde esta função pode realizar a ação <em>{0}</em> no portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Selecione os sites onde esta função pode realizar a ação <em>{0}</em> no recurso {1}.
@@ -14503,8 +14503,8 @@ set-the-discount-amount-and-the-discount-type=Define o valor e tipo do desconto.
 set-the-display-order-of-child-pages=Configurar a ordem de disposição das páginas filhas.
 set-the-display-order-of-news-feeds=Configurar a ordem de disposição de feeds de notícias.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Configurar os seguintes valores para filtrar emails associados com um endereço e guardá-los em uma pasta.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Configurar as opções de personalização do Google Analytics 4 que serão utilizadas por este grupo de páginas.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Configurar o ID do Google Analytics 4 que será utilizado por este grupo de páginas.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Configurar as opções de personalização do método do Google Analytics que serão utilizadas por este grupo de páginas.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Configurar as opções de personalização do Google Analytics que serão utilizadas por este grupo de páginas.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Configurar o ID do Google Analytics que será utilizado por esse grupo de páginas.
@@ -14998,7 +14998,7 @@ sites-tab-description=Os sites só podem ser atribuídos a uma única propriedad
 sites-that-i-administer=Sites que Eu Administro
 sites-to-sync-x=Sites para sincronizar - {0}
 size=Tamanho
-size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
+size-suggestion-help=Definir o número máximo de resultados a exibir nas sugestões.
 skip-to-content=Pular para o Conteúdo
 skip-to-search=Pular para a busca
 sku=SKU
@@ -15514,7 +15514,7 @@ successfully-unassigned-display-page-template=Atribuição cancelada com sucesso
 such-as-x-or-x=Como {0} ou {1}
 suffix=Sufixo
 suggestion-contributor=Contribuidor de sugestão
-suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
+suggestion-contributor-help=Inserir o nome do colaborador usado para exibir sugestões.
 suggestion-in-progress-email=Email de Sugestão em Progresso
 suggestion-received-email=Email de Sugestão Recebida
 suggestion-resolved-email=Email de Sugestão Resolvida
@@ -15523,10 +15523,10 @@ suggestion-was-deleted-successfully=A sugestão foi excluída com sucesso.
 suggestion-was-saved-successfully=A sugestão foi salva com sucesso.
 suggestions=Sugestões
 suggestions-configuration=Configuração de sugestões
-suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
+suggestions-configuration-description=Configurar as sugestões que um usuário vê enquanto insere os termos de pesquisa.
 suggestions-contributor-configuration=Configuração do distribuidor de sugestões
 suggestions-contributor-configuration-help=Define o JSON de configuração do contribuir de sugestões.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Inserir o contributorName para o colaborador de sugestão, o displayGroupName com o texto do cabeçalho a ser exibido e o tamanho para controlar o máximo de resultados a ser devolvido pelo colaborador.
 suggestions-were-deleted-successfully=As sugestões foram excluídas com sucesso.
 suite=Suíte
 sum=Soma
@@ -16702,7 +16702,7 @@ the-selected-file-is-not-a-valid-zip-file=O arquivo selecionado não é um arqui
 the-selected-form-no-longer-exists=O formulário selecionado não existe mais.
 the-selected-image-was-deleted=A imagem selecionada foi excluída.
 the-selected-image-was-moved-to-the-recycle-bin=A imagem selecionada foi movida par a Lixeira.
-the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=A base de conhecimento selecionada está vazia.
 the-selected-license-is-used-by-at-least-one-product=A licença selecionada é usada por pelo menos um produto.
 the-selected-list-no-longer-exists=A lista selecionada não existe mais.
 the-selected-menu-does-not-exist=Ocorreu um erro, este menu não existe.
@@ -17142,7 +17142,7 @@ there-are-no-resolved-suggestions=Não há sugestões não solucionadas.
 there-are-no-resources=Não há recursos.
 there-are-no-restrictions=Não existem restrições.
 there-are-no-results=Não há resultados.
-there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
+there-are-no-results-for-the-search-term-x=Não há resultados para o termo da pesquisa: {0}.
 there-are-no-results-for-x=Não há nenhum resultado para "{0}". Verifique se a palavra foi escrita corretamente ou procure por um termo diferente.
 there-are-no-results-for-x-with-these-attributes=Não há nenhum resultado para "{0}" com estes atributos. Ajuste seus filtros para ampliar seus resultados.
 there-are-no-results-with-these-attributes=Não há nenhum resultado com estes atributos. Ajuste seus filtros para ampliar seus resultados.
@@ -17898,7 +17898,7 @@ unable-to-parse-xml-document=Não foi possível analisar o documento XML.
 unable-to-parse-xml-document-for-portlet-x-during-import=Não é possível analisar um documento XML para o portlet {0} durante a importação.
 unable-to-parse-xml-portlet-preferences-for-portlet-x-while-importing-portlet-preferences=Não é possível analisar as preferências do portlet XLM para o portlet {0} durante a importação das preferências do portlet.
 unable-to-parse-xml-service-information-for-portlet-x-during-import=Não é possível analisar informações de serviço XML para o portlet {0} durante a importação.
-unable-to-perform-the-search-because-the-provided-search-term-is-too-ambiguous=Não é possível realizar a busca porque os termos busca fornecidos é muito ambíguo.
+unable-to-perform-the-search-because-the-provided-search-term-is-too-ambiguous=Não é possível realizar a busca porque o termo da pesquisa fornecido é muito ambíguo.
 unable-to-process-lar-file-for-layout-import-validation-while-executing-x-due-to-a-file-system-error=Não foi possível processar o arquivo LAR para a validação de importação de layout durante a execução de {0} devido a um erro de sistema do arquivo.
 unable-to-process-lar-file-for-layout-import-while-executing-x-due-to-a-file-system-error=Não foi possível processar o arquivo LAR para a importação de layout durante a execução de {0} devido a um erro de sistema do arquivo.
 unable-to-process-lar-file-for-portlet-import-validation-while-executing-x-due-to-a-file-system-error=Não foi possível processar o arquivo LAR para a validação de importação de portlet durante a execução de {0} devido a um erro de sistema do arquivo.
@@ -19338,7 +19338,7 @@ x-result-for-x={0} Resultado de {1}
 x-results={0} resultados
 x-results-for={0} Resultados para
 x-results-for-x={0} Resultados para {1}
-x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} resultados devolvidos para o termo da pesquisa: {1}.
 x-review-a-x={0} precisa revisar {1}.
 x-revisions={0} Revisões
 x-role=Função {0}
