--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1135,7 +1135,7 @@ advanced-css-styling=Avancerad CSS-stil
 advanced-file-system-store-configuration-name=Avancerat filsystemlager
 advanced-properties=Avancerade egenskaper
 advanced-reply=Avancerat svar
-advanced-rule=Advanced Rule (Automatic Copy)
+advanced-rule=Avancerad regel
 advanced-selection=Avancerat val
 advanced-styling=Avancerade stilalternativ
 aes256-key=AES-256-nyckel
@@ -3066,7 +3066,7 @@ chapters=Kapitel
 character-options=Teckenalternativ
 character-threshold=Teckengräns
 character-threshold-for-displaying-suggestions=Tröskelvärde för tecken för att visa förslag
-character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Ställ in antalet tecken som användaren bör skriva innan förslag visas.
 characters=Tecken
 characters-blacklist=Svartlista för tecken
 characters-maximum=Max antal tecken
@@ -3142,7 +3142,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Kryssa i för att visa lista som
 check-token=Kontrollera bildtoken
 check-url=Kontrollera URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Kolla din e-post</a> eller <a href="{1}">konfigurera dina e-postkonton.</a>
-check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
+check-your-spelling-or-search-for-a-different-term=Kontrollera att du stavat rätt eller sök efter en annan term.
 checkbox=Kryssruta
 checkbox-field-type-description=Svara ja eller nej på frågor genom att använda en kryssruta.
 checkbox-multiple-field-type-description=Välj flera alternativ genom att använda en kryssruta.
@@ -5378,7 +5378,7 @@ display-fields-and-one-to-one-relationships=Visa fält och en-till-en-förhålla
 display-folder-facet=Visa mappfasett
 display-frequencies=Visa frekvenser
 display-group-name=Visa gruppnamn
-display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
+display-group-name-help=Ange rubriketikett för förslagen från varje deltagare.
 display-horizontally=Visa horisontellt
 display-immediately=Visa direkt
 display-label=Visa etikett
@@ -6741,7 +6741,7 @@ field.user-name=Namn
 fields=Fält
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fält läggs till om du behöver separera varorna. Exempelvis, om du säljer T-shirts, vill du förmodligen lägga till ett fält med namnet <em>Storlek</em> som innehåller <em>S, M, L, XL</em>. Separera alla värden i fältet med kommatecken.
 fields-help=En lista med fält för att hämta och analysera textformuläret.
-fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
+fields-suggestion-help=Ange ytterligare fält som returneras med svaret.
 fields-to-display=Fält att visa
 fields-to-display-help=Ange namnen på fältet som ska visas i sammanfattningen, i en kommaseparerad lista. Om detta inte anges kommer alla fält att visas. Det första fältet visas alltid som titel. Om två fält anges kommer det andra fältet alltid att visas som innehåll.
 fields-to-return=Fält att returnera
@@ -7264,8 +7264,8 @@ go-to-this-version=Gå till den här versionen
 go-to-workspace=Gå till arbetsytan
 go-to-x=Gå till {0}
 goal=Mål
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Anpassad Google Analytics 4-konfiguration
+google-analytics-4-id=Google Analytics 4-ID
 google-analytics-create-custom-configuration=Skapa metod bara anpassad konfiguration i Google Analytics
 google-analytics-custom-configuration=Anpassad Google Analytics-konfiguration
 google-analytics-id=Google Analytics-ID
@@ -7833,9 +7833,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Inkludera
 include-always=Inkludera Alltid
 include-artifact-in-repository=Inkludera artefakt i lagringsplatsen
 include-asset-summary=Inkludera resurssammanfattning
-include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
+include-asset-summary-help=Aktivera att returnera sammanfattning av resultat med svaret.
 include-asset-url=Inkludera resurs-URL
-include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
+include-asset-url-help=Aktivera att returnera länken till resultat med svaret.
 include-bundle-symbolic-name=Ange paketets symboliska namn
 include-bundle-symbolic-name-description=När detta väljs inkluderas paketets symboliska namn i omfångets prefix.
 include-clear-filters-option=Inkludera alternativ att rensa filter
@@ -9042,7 +9042,7 @@ lead-font-size=Ledande teckenstorlek
 lead-font-weight=Ledande teckengrovlek
 leaderboard=Resultatlista
 learn-more=Läs mer
-learn-more-about-date-formats=Learn more about date formats. (Automatic Copy)
+learn-more-about-date-formats=Läs mer om datumformat.
 learn-more-about-x=Läs mer om {0}.
 learning-to-rank-configuration-name=Lära sig att rangordna
 leave=Lämna
@@ -11586,7 +11586,7 @@ page-design-options=Alternativ för siddesign
 page-display-order=Sidornas ordningföljd
 page-edition-mode-x=Sidredigeringsläge: {0}
 page-editor-auto-extend-session-enabled-description=Aktivering förlänger automatiskt sessionen när sidredigeraren är öppen.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=Sidredigeraren sparar ditt arbete automatiskt.
 page-editor-configuration-name=Sidredigerare
 page-editor-max-number-of-items-edit-mode-description=Maximalt antal objekt som visas i en samling är begränsade i redigeringsläget på grund av sidåtergivningsprestanda. Den här gränsen påverkar inte samlingens visualisering på den publicerade sidan. Prestandan för redigeringsläget på en innehållssida kan påverkas negativt om det här värdet ökar.
 page-elements=Sidelement
@@ -11655,7 +11655,7 @@ pages-option=Sidalternativ
 pages-options=Sidalternativ
 pages-to-export=Sidor att exportera
 pages-to-publish=Sidor att publicera
-pages-type=Pages Type (Automatic Copy)
+pages-type=Sidtyper
 pages-variations-help=Med webbplatsens sidvariationer kan du arbeta parallellt med olika variationer av sidorna på webbplatsen. Innehållet delas av alla dina sidvariationer för webbplatsen. Publicering i live för en sidvariation på webbplatsen kan schemaläggas eller genomföras manuellt.
 pages-with-tag-x=Sidor med tagg <em>{0}</em>.
 pages-with-x-x=Sidor med {0} <em>{1}</em>.
@@ -13210,7 +13210,7 @@ reminder=Påminnelse
 reminder-email=E-postpåminnelse
 reminder-queries=Påminnelsefrågor
 reminder-query-and-answer-cannot-be-empty=Fråga och svar för påminnelse kan inte lämnas tomma.
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Svar för påminnelsefråga
 reminder-query-question=Fråga för påminnelsefråga
 reminders=Påminnelser
 remote=Fjärr
@@ -13934,7 +13934,7 @@ search-entries=Sök inlägg
 search-everywhere=Sök överallt
 search-experiences=Sök efter erfarenheter
 search-feeds=Sök prenumerationer
-search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
+search-field-is-empty=Sökfältet är tomt. Alla fält är listade.
 search-file-entries=Sök filer
 search-folder=Sök mapp
 search-folders=Sök mappar
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Välj om
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>-portleten.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>-resursen.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment=Välj omfattning för ditt segment för att specificera var det kan användas.
 select-the-searchable-types-description=Välj sökbara typer. Om inga typer väljs kommer alla sökbara typer (resurser och objekt) att sökas.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Välj de webbplatser där den här rollen kan utföra åtgärden <em>{0}</em> på portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Välj de webbplatser där den här rollen kan utföra åtgärden <em>{0}</em> på resursen {1}.
@@ -14503,8 +14503,8 @@ set-the-discount-amount-and-the-discount-type=Ange rabattbelopp och rabattyp. Om
 set-the-display-order-of-child-pages=Ange hur undersidorna ska visas.
 set-the-display-order-of-news-feeds=Ange hur nyheterna ska visas.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Ange följande värden för att filtrera e-post relaterade till en e-postadress till en mapp.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Ange anpassningsmöjligheter för Google Analytics 4 som används för de här sidorna.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Ställ in Google Analytics 4-ID som kommer användas för dessa sidor.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Ange anpassningsmöjligheter för att skapa metod i Google Analytics som används för de här sidorna.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Ange anpassningsmöjligheter för Google Analytics som används för de här sidorna.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Sätt Google Analytics ID som kommer användas för denna mängd sidor.
@@ -14998,7 +14998,7 @@ sites-tab-description=Webbplatser kan bara tilldelas till en resurs åt gången.
 sites-that-i-administer=Webbplatser som jag administrerar
 sites-to-sync-x=Platser att synkronisera - {0}
 size=Storlek
-size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
+size-suggestion-help=Ställ in maximalt antal resultat som visas i förslag.
 skip-to-content=Hoppa till innehåll
 skip-to-search=Hoppa över till sökning
 sku=Artikelnr
@@ -15514,7 +15514,7 @@ successfully-unassigned-display-page-template=Tilldelning har tagits bort för f
 such-as-x-or-x=Som {0} eller {1}
 suffix=Suffix
 suggestion-contributor=Deltagare för förslag
-suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
+suggestion-contributor-help=Ange namnet på deltagaren som används för att visa förslag.
 suggestion-in-progress-email=E-post med förslag pågår
 suggestion-received-email=E-post med förslag mottaget
 suggestion-resolved-email=E-post med förslag löst
@@ -15523,10 +15523,10 @@ suggestion-was-deleted-successfully=Förslaget har tagits bort.
 suggestion-was-saved-successfully=Förslag har sparats.
 suggestions=Förslag
 suggestions-configuration=Konfiguration av förslag
-suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
+suggestions-configuration-description=Konfigurera förslagen som en användare ser när hen söker efter termer.
 suggestions-contributor-configuration=Konfiguration för förslagsdeltagare
 suggestions-contributor-configuration-help=Ställ in konfigurations-JSON för förslagsdeltagare.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Ange contributorName för förslagsdeltagare, displayGroupName med rubriktext som visas och storleken för att kontrollera maximalt antal resultat som returneras av deltagaren.
 suggestions-were-deleted-successfully=Förslag har tagits bort.
 suite=Svit
 sum=Summa
@@ -16702,7 +16702,7 @@ the-selected-file-is-not-a-valid-zip-file=Den valda filen är inte en giltig ZIP
 the-selected-form-no-longer-exists=Det valda formuläret finns inte längre.
 the-selected-image-was-deleted=Den valda bilden har tagits bort.
 the-selected-image-was-moved-to-the-recycle-bin=Den valda bilden har flyttats till papperskorgen.
-the-selected-knowledge-base-is-empty=The selected knowledge base is empty. (Automatic Copy)
+the-selected-knowledge-base-is-empty=Den valda kunskapsbasen är tom.
 the-selected-license-is-used-by-at-least-one-product=Den valda licensen används av minst en produkt.
 the-selected-list-no-longer-exists=Den valda listan existerar inte längre.
 the-selected-menu-does-not-exist=Den valda menyn finns inte.
@@ -17142,7 +17142,7 @@ there-are-no-resolved-suggestions=Det finns inga lösta förslag.
 there-are-no-resources=Det finns inga resurser.
 there-are-no-restrictions=Det finns inga begränsningar.
 there-are-no-results=Det finns inga träffar.
-there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
+there-are-no-results-for-the-search-term-x=Det finns inga resultat för söktermen: {0}.
 there-are-no-results-for-x=Det finns inga resultat för "{0}". Kontrollera att du stavat rätt eller sök efter en annan term.
 there-are-no-results-for-x-with-these-attributes=Det finns inga resultat för "{0}" med dessa attribut. Justera dina filter för att utöka dina resultat.
 there-are-no-results-with-these-attributes=Det finns inga resultat med dessa attribut. Justera dina filter för att utöka dina resultat.
@@ -19338,7 +19338,7 @@ x-result-for-x={0} resultat för {1}
 x-results={0} resultat
 x-results-for={0} resultat för
 x-results-for-x={0} resultat för {1}
-x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} resultat returnerades för söktermen: {1}.
 x-review-a-x={0} måste granska {1}.
 x-revisions={0} revisioner
 x-role={0} Roll
